refactor: [website] - directories adjustment + change title

--- a/resources/layout/header.html
+++ b/resources/layout/header.html
@@ -4,11 +4,11 @@
 
 <head>
 
-<title>PHP na Prática · Gustavo Fraga</title>
+<title>Codando PHP · Gustavo Fraga</title>
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
-<meta name="description" content="PHP na Prática · Gustavo Fraga">
+<meta name="description" content="Codando PHP · Gustavo Fraga">
 <meta name="author" content="Gustavo Fraga">
 
 <link href="https://fonts.googleapis.com/css?family=Muli:300,400,700,900" rel="stylesheet">
