--- a/resources/layout/header.html
+++ b/resources/layout/header.html
@@ -26,3 +26,21 @@
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 
 <div class="site-wrap">
+
+<header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
+  <div class="container-fluid">
+    <div class="d-flex align-items-center">
+      <div class="site-logo mr-auto w-25"><a href="/">Codando PHP</a></div>
+      <!--
+      <div class="ml-auto w-25">
+        <nav class="site-navigation position-relative text-right" role="navigation">
+          <ul class="site-menu main-menu site-menu-dark js-clone-nav mr-auto d-none d-lg-block m-0 p-0">
+            <li class="cta"><a href="#" class="nav-link"><span>Faça uma Doação</span></a></li>
+          </ul>
+        </nav>
+        <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right"><span class="icon-menu h3"></span></a>
+      </div>
+      -->
+    </div>
+  </div>
+</header>
