--- a/resources/layout/header.html
+++ b/resources/layout/header.html
@@ -7,7 +7,7 @@
 <title>Codando PHP · Gustavo Fraga</title>
 
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="description" content="Codando PHP · Gustavo Fraga">
 <meta name="author" content="Gustavo Fraga">
 
